--- a/source/form.html
+++ b/source/form.html
@@ -19,11 +19,13 @@
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
       </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программ</a></li>
-      </ul>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программ</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
   <main class="main">
