--- a/source/index.html
+++ b/source/index.html
@@ -20,11 +20,13 @@
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
       </button>
-      <ul class="main-nav__list main-nav__list--index">
-        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
-      </ul>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list  main-nav__list--index">
+          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
