--- a/source/index.html
+++ b/source/index.html
@@ -121,7 +121,7 @@
 
     <div class="footer__link-container">
       <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <section class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
