правки формы после замечаний

--- a/source/index.html
+++ b/source/index.html
@@ -80,19 +80,21 @@
       <p class="sample__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок!
         При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-      <div class="sample__wrapper">
-        <dl class="sample__list">
-          <div class="sample__item">
-            <dt class="sample__description sample__description--block-1">Снижение веса</dt>
-            <dd class="sample__value">5&nbsp;кг</dd>
-          </div>
-          <div class="sample__item">
-            <dt class="sample__description sample__description--block-2">Затрачено времени</dt>
-            <dd class="sample__value">60&nbsp;дней</dd>
-          </div>
-        </dl>
-        <p class="sample__price-text">Затраты на питание: <span>15&nbsp;000&nbsp;₽</span></p>
-      </div>
+
+      <dl class="sample__list">
+        <div class="sample__item">
+          <dt class="sample__description sample__description--block-1">
+            Снижение веса Снижение веса Снижение веса Снижение веса Снижение веса Снижение веса Снижение веса
+          </dt>
+          <dd class="sample__value">5&nbsp;кг</dd>
+        </div>
+        <div class="sample__item">
+          <dt class="sample__description sample__description--block-2">Затрачено времени</dt>
+          <dd class="sample__value">60&nbsp;дней</dd>
+        </div>
+      </dl>
+      <p class="sample__price-text">Затраты на питание: <span>15&nbsp;000&nbsp;₽</span></p>
+
       <div class="slider">
         <div class="slider__images">
           <img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
