--- a/source/form.html
+++ b/source/form.html
@@ -31,48 +31,45 @@
   <main class="main">
 
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
-
       <h1 class="form__title">Подбор программы</h1>
       <p class="form__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
-      <div class="form__flex-container">
-        <fieldset class="form__module form__module--info">
-          <legend class="visually-hidden">Информация о питомце</legend>
-          <ul class="form__module-list">
-            <li class="form__module-item">
-              <label class="form__text-label" for="name">Имя:*</label>
-              <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
-            </li>
-            <li class="form__module-item">
-              <label class="form__text-label" for="weigth">Вес(кг):*</label>
-              <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
-            </li>
-            <li class="form__module-item">
-              <label class="form__text-label" for="age">Возраст(лет):*</label>
-              <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="form__module form__module--diet">
-          <legend class="visually-hidden">Какая диета интересует</legend>
-          <ul class="form__module-list">
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="lose-weight" value="lose-weight" checked>
-              <label class="form__radio-label" for="lose-weight">Похудение</label>
-            </li>
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="weight-gain" value="weight-gain">
-              <label class="form__radio-label" for="weight-gain">Набор массы</label>
-            </li>
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="advice" value="advice">
-              <label class="form__radio-label" for="advice">Не знаю (нужен ваш совет)</label>
-            </li>
-          </ul>
-        </fieldset>
-      </div>
-      <fieldset class="form__module module-contacts">
+      <fieldset class="form__module form__module--info">
+        <legend class="visually-hidden">Информация о питомце</legend>
+        <ul class="form__module-list">
+          <li class="form__module-item">
+            <label class="form__text-label" for="name">Имя:*</label>
+            <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
+          </li>
+          <li class="form__module-item">
+            <label class="form__text-label" for="weigth">Вес(кг):*</label>
+            <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
+          </li>
+          <li class="form__module-item">
+            <label class="form__text-label" for="age">Возраст(лет):*</label>
+            <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__module form__module--diet">
+        <legend class="visually-hidden">Какая диета интересует</legend>
+        <ul class="form__module-list">
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="lose-weight" value="lose-weight" checked>
+            <label class="form__radio-label" for="lose-weight">Похудение</label>
+          </li>
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="weight-gain" value="weight-gain">
+            <label class="form__radio-label" for="weight-gain">Набор массы</label>
+          </li>
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="advice" value="advice">
+            <label class="form__radio-label" for="advice">Не знаю (нужен ваш совет)</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__module form__module--contacts">
         <legend class="form__module-legend legend-contacts">Контактрые&nbsp;данные (владельца кота)</legend>
-        <ul class="form__module-list form__flex-container">
+        <ul class="form__module-list">
           <li class="form__module-item form__module-item--grow">
             <label class="form__field-label" for="e-mail">E-mail:*</label>
             <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
@@ -83,12 +80,12 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="form__module module-comment">
+      <fieldset class="form__module form__module--comment">
         <legend class="form__module-legend legend-comment">Комментарий</legend>
         <label class="form__comment-label" for="comment" aria-label="Комментарий"></label>
         <textarea class="form__comment-input" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
-      <fieldset class="form__module module-extra">
+      <fieldset class="form__module form__module--extra">
         <legend class="form__module-legend legent-extra">Дополнительно:</legend>
         <ul class="form__module-list module-list--extra">
           <li class="form__module-check">
@@ -109,10 +106,9 @@
           </li>
         </ul>
       </fieldset>
-      <div class="form__submit field-submit">
-        <button class="form__button button" type="submit">Отправить заявку</button>
-        <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
-      </div>
+      <button class="form__button button" type="submit">Отправить заявку</button>
+      <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
+
     </form>
   </main>
 
