--- a/3/catalog.html
+++ b/3/catalog.html
@@ -238,12 +238,12 @@
 
     <div class="map">
       <h2 class="visually-hidden">Схема проезда</h2>
-        <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
+      <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
     </div>
     <div class="footer__link-container">
 
       <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
 
       <section class="social">
