--- a/3/form.html
+++ b/3/form.html
@@ -32,48 +32,45 @@
   <main class="main">
 
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
-
       <h1 class="form__title">Подбор программы</h1>
       <p class="form__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
-      <div class="form__flex-container">
-        <fieldset class="form__module form__module--info">
-          <legend class="visually-hidden">Информация о питомце</legend>
-          <ul class="form__module-list">
-            <li class="form__module-item">
-              <label class="form__text-label" for="name">Имя:*</label>
-              <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
-            </li>
-            <li class="form__module-item">
-              <label class="form__text-label" for="weigth">Вес(кг):*</label>
-              <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
-            </li>
-            <li class="form__module-item">
-              <label class="form__text-label" for="age">Возраст(лет):*</label>
-              <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="form__module form__module--diet">
-          <legend class="visually-hidden">Какая диета интересует</legend>
-          <ul class="form__module-list">
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="lose-weight" value="lose-weight" checked>
-              <label class="form__radio-label" for="lose-weight">Похудение</label>
-            </li>
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="weight-gain" value="weight-gain">
-              <label class="form__radio-label" for="weight-gain">Набор массы</label>
-            </li>
-            <li class="form__module-radio">
-              <input class="form__radio-input" type="radio" name="diet" id="advice" value="advice">
-              <label class="form__radio-label" for="advice">Не знаю (нужен ваш совет)</label>
-            </li>
-          </ul>
-        </fieldset>
-      </div>
-      <fieldset class="form__module module-contacts">
+      <fieldset class="form__module form__module--info">
+        <legend class="visually-hidden">Информация о питомце</legend>
+        <ul class="form__module-list">
+          <li class="form__module-item">
+            <label class="form__text-label" for="name">Имя:*</label>
+            <input class="form__text-input" type="text" name="name" id="name" placeholder="Барсик">
+          </li>
+          <li class="form__module-item">
+            <label class="form__text-label" for="weigth">Вес(кг):*</label>
+            <input class="form__text-input" type="text" name="name" id="weigth" placeholder="7">
+          </li>
+          <li class="form__module-item">
+            <label class="form__text-label" for="age">Возраст(лет):*</label>
+            <input class="form__text-input" type="text" name="name" id="age" placeholder="7">
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__module form__module--diet">
+        <legend class="visually-hidden">Какая диета интересует</legend>
+        <ul class="form__module-list">
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="lose-weight" value="lose-weight" checked>
+            <label class="form__radio-label" for="lose-weight">Похудение</label>
+          </li>
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="weight-gain" value="weight-gain">
+            <label class="form__radio-label" for="weight-gain">Набор массы</label>
+          </li>
+          <li class="form__module-radio">
+            <input class="form__radio-input" type="radio" name="diet" id="advice" value="advice">
+            <label class="form__radio-label" for="advice">Не знаю (нужен ваш совет)</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form__module form__module--contacts">
         <legend class="form__module-legend legend-contacts">Контактрые&nbsp;данные (владельца кота)</legend>
-        <ul class="form__module-list form__flex-container">
+        <ul class="form__module-list">
           <li class="form__module-item form__module-item--grow">
             <label class="form__field-label" for="e-mail">E-mail:*</label>
             <input class="form__field-input" type="email" name="e-mail" id="e-mail" placeholder="kuklachev@gmail.com" required>
@@ -84,12 +81,12 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="form__module module-comment">
+      <fieldset class="form__module form__module--comment">
         <legend class="form__module-legend legend-comment">Комментарий</legend>
         <label class="form__comment-label" for="comment" aria-label="Комментарий"></label>
         <textarea class="form__comment-input" name="comment" id="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
-      <fieldset class="form__module module-extra">
+      <fieldset class="form__module form__module--extra">
         <legend class="form__module-legend legent-extra">Дополнительно:</legend>
         <ul class="form__module-list module-list--extra">
           <li class="form__module-check">
@@ -110,10 +107,9 @@
           </li>
         </ul>
       </fieldset>
-      <div class="form__submit field-submit">
-        <button class="form__button button" type="submit">Отправить заявку</button>
-        <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
-      </div>
+      <button class="form__button button" type="submit">Отправить заявку</button>
+      <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
+
     </form>
   </main>
 
@@ -126,11 +122,11 @@
 
     <div class="map">
       <h2 class="visually-hidden">Схема проезда</h2>
-        <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
+      <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
     </div>
     <div class="footer__link-container">
       <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <section class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
