--- a/source/index.html
+++ b/source/index.html
@@ -33,10 +33,12 @@
   <main class="main">
 
     <section class="promo">
-      <h1 class="promo__title">Функциональное<br>питание для котов</h1>
-      <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
-      <a class="promo__button button" href="form.html">Подобрать&nbsp;программу</a>
+      <div class="container">
+        <h1 class="promo__title">Функциональное<br>питание для котов</h1>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
+        <a class="promo__button button" href="form.html">Подобрать&nbsp;программу</a>
+      </div>
     </section>
 
     <section class="program">
