--- a/source/index.html
+++ b/source/index.html
@@ -11,29 +11,31 @@
 <body class="page__body">
 
   <header class="page-header">
-    <a class="page-header__logo logo" href="index.html" aria-current="page">
-      <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-      <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
-    </a>
-    <nav class="main-nav main-nav--is-close main-nav--nojs">
-      <button class="btn-burger">
-        <span class="visually-hidden">Открыть меню</span>
-        <span class="visually-hidden">Закрыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list main-nav__list--index">
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container header__container">
+      <a class="logo__header logo" href="index.html" aria-current="page">
+        <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+      </a>
+      <nav class="main-nav main-nav--is-close main-nav--nojs">
+        <button class="btn-burger">
+          <span class="visually-hidden">Открыть меню</span>
+          <span class="visually-hidden">Закрыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list main-nav__list--index">
+            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
 
     <section class="promo">
-      <div class="container">
+      <div class="container promo__container">
         <h1 class="promo__title">Функциональное<br>питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
         <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
@@ -42,7 +44,8 @@
     </section>
 
     <section class="program">
-      <h2 class="visually-hidden">Выбор программы питания</h2>
+      <div class="container program__container">
+        <h2 class="visually-hidden">Выбор программы питания</h2>
       <ul class="program__list">
         <li class="program__item program__item--slim">
           <h2 class="program__title">Похудение</h2>
@@ -57,10 +60,12 @@
           <a class="program__link" href="#">Каталог Pro</a>
         </li>
       </ul>
+      </div>
     </section>
 
     <section class="advantages">
-      <h2 class="advantages__title">Как это работает</h2>
+      <div class="container advantages__container">
+        <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
         <li class="advantages__item advantages__item--healthy">
           <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
@@ -75,10 +80,11 @@
           <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
+      </div>
     </section>
 
     <section class="sample">
-      <div class="sample__container">
+      <div class="container sample__container">
         <h2 class="sample__title">Живой пример</h2>
         <p class="sample__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
           Отличный результат без изнуряющих тренировок!
@@ -111,45 +117,48 @@
   </main>
 
   <footer class="footer">
-
-    <div class="footer__address-container">
-      <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-      <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
-    </div>
-
-    <div class="map">
-      <h2 class="visually-hidden">Схема проезда</h2>
-      <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
-      <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
-    </div>
-
-    <div class="footer__link-container">
-      <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
-      </a>
-      <section class="social">
+    <section class="footer__addres">
+      <div class="footer__address-container">
+        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      </div>
+      <div class="map">
+        <h2 class="visually-hidden">Схема проезда</h2>
+        <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
+        <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
+      </div>
+    </section>
+    <section class="social">
+      <div class="container">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Наша группа VK</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Наш канал на youtube</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--tg" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Наш канал в Telegram</span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <a class="dev" href="#">
-        <p class="dev__name">HTML Academy</p>
-        <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+      <div class="footer__link-container">
+        <a class="logo footer__logo" href="index.html" aria-current="page">
+          <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        </a>
+      </div>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Наша группа VK</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Наш канал на youtube</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--tg" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Наш канал в Telegram</span>
+          </a>
+        </li>
+      </ul>
+      </div>
+    </section>
+    <div class="container dev__container">
+      <a class="footer__dev-link" href="#">
+        <p class="footer__dev-name">HTML Academy</p>
+        <img class="footer__dev-img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
