Продалжает работу с контейнером

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -178,7 +178,7 @@
     </section>
 
     <section class="catalog catalog--other">
-      <div class="container">
+      <div class="container catalog-other__container">
         <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
 
         <ul class="catalog__list catalog__list--other">
@@ -231,14 +231,15 @@
           <p class="other-action__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
       </div>
-
     </section>
   </main>
   <footer class="footer">
 
-    <section class="footer__addres">
-      <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-      <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+    <section class="footer__addres footer__addres--background">
+      <div class="footer__address-container">
+        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
         <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
