--- a/source/form.html
+++ b/source/form.html
@@ -10,23 +10,25 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo logo" href="index.html" aria-current="page">
-      <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-      <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
-    </a>
-    <nav class="main-nav main-nav--is-close main-nav--nojs">
-      <button class="btn-burger">
-        <span class="visually-hidden">Открыть меню</span>
-        <span class="visually-hidden">Закрыть меню</span>
-      </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программ</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container header__container">
+      <a class="logo__header logo" href="index.html">
+        <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+      </a>
+      <nav class="main-nav main-nav--is-close main-nav--nojs">
+        <button class="btn-burger">
+          <span class="visually-hidden">Открыть меню</span>
+          <span class="visually-hidden">Закрыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="form.html" aria-current="page">Подбор программ</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main class="main">
 
