--- a/source/form.html
+++ b/source/form.html
@@ -115,9 +115,11 @@
   </main>
   <footer class="footer">
     <section class="footer__addres footer__addres--background">
-      <div class="footer__address-container">
-        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      <div class="container">
+        <div class="footer__address-container">
+          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+        </div>
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
