Центровка контенткой области всех страниц, всех состояний

--- a/source/form.html
+++ b/source/form.html
@@ -152,8 +152,8 @@
         </ul>
       </div>
       <a class="footer__dev" href="#">
-        <p class="footer__dev__name">HTML Academy</p>
-        <img class="footer__dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <p class="footer__dev-name">HTML Academy</p>
+        <img class="footer__dev-img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
