:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
 
-  <header class="page-header">
+  <header class="page-header page-header--index">
     <div class="container header__container">
       <a class="logo__header logo" href="index.html" aria-current="page">
         <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
@@ -119,9 +119,11 @@
 
   <footer class="footer">
     <section class="footer__addres">
-      <div class="footer__address-container">
-        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      <div class="container">
+        <div class="footer__address-container">
+          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+        </div>
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
