--- a/3/catalog.html
+++ b/3/catalog.html
@@ -22,7 +22,7 @@
           <span class="visually-hidden">Закрыть меню</span>
         </button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list main-nav__list--index">
+          <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link" href="index.html" aria-current="page">Главная</a></li>
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html">Каталог&nbsp;продукции</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
@@ -237,9 +237,11 @@
   <footer class="footer">
 
     <section class="footer__addres footer__addres--background">
-      <div class="footer__address-container">
-        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      <div class="container">
+        <div class="footer__address-container">
+          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+        </div>
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
