--- a/3/form.html
+++ b/3/form.html
@@ -116,9 +116,11 @@
   </main>
   <footer class="footer">
     <section class="footer__addres footer__addres--background">
-      <div class="footer__address-container">
-        <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
-        <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+      <div class="container">
+        <div class="footer__address-container">
+          <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
+          <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
+        </div>
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
@@ -151,8 +153,8 @@
         </ul>
       </div>
       <a class="footer__dev" href="#">
-        <p class="footer__dev__name">HTML Academy</p>
-        <img class="footer__dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <p class="footer__dev-name">HTML Academy</p>
+        <img class="footer__dev-img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
