Центровка контентной области всех страниц всех версий

--- a/source/form.html
+++ b/source/form.html
@@ -114,8 +114,8 @@
     </div>
   </main>
   <footer class="footer">
-    <section class="footer__addres footer__addres--background">
-      <div class="container">
+    <section class="footer__address footer__address--background">
+      <div class="container footer__container">
         <div class="footer__address-container">
           <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
           <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
