--- a/source/index.html
+++ b/source/index.html
@@ -117,8 +117,8 @@
   </main>
 
   <footer class="footer">
-    <section class="footer__addres">
-      <div class="container">
+    <section class="footer__address">
+      <div class="container footer__container">
         <div class="footer__address-container">
           <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
           <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
@@ -155,8 +155,8 @@
         </ul>
       </div>
       <a class="footer__dev" href="#">
-        <p class="footer__dev__name">HTML Academy</p>
-        <img class="footer__dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <p class="footer__dev-name">HTML Academy</p>
+        <img class="footer__dev-img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
