--- a/source/catalog.html
+++ b/source/catalog.html
@@ -234,9 +234,8 @@
     </section>
   </main>
   <footer class="footer">
-
-    <section class="footer__addres footer__addres--background">
-      <div class="container">
+    <section class="footer__address footer__address--background">
+      <div class="container footer__container">
         <div class="footer__address-container">
           <p class="footer__address-title">Приглашаем к сотрудничеству<br> дилеров!</p>
           <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
