--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,8 @@
 <body class="page__body">
 
   <header class="page-header page-header--index">
-    <div class="container header__container">
-      <a class="logo__header logo" href="index.html" aria-current="page">
+    <div class="container page-header__container">
+      <a class="page-header__logo  logo" href="index.html" aria-current="page">
         <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
