:heavy_check_mark: Сборка #3

--- a/3/catalog.html
+++ b/3/catalog.html
@@ -11,8 +11,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="container header__container">
-      <a class="logo__header logo" href="index.html">
+    <div class="container page-header__container">
+      <a class="page-header__logo  logo" href="index.html">
         <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
@@ -23,8 +23,8 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link" href="index.html" aria-current="page">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html">Каталог&nbsp;продукции</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html" aria-current="page">Каталог&nbsp;продукции</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
           </ul>
         </div>
@@ -76,7 +76,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy<br> Pro. Вкус-рыба.">
+              <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -95,7 +95,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy<br> Pro. Вкус-рыба">
+              <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -114,7 +114,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy<br> Slim. Вкус-гречка.">
+              <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -133,7 +133,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy<br> Slim. Вкус-гречка">
+              <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -152,7 +152,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy<br> Slim. Вкус-рис">
+              <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -169,7 +169,7 @@
             </div>
             <a class="product__button button" href="#">Заказать</a>
           </li>
-          <li class="catalog__item product--more">
+          <li class="catalog__item product-more">
             <h2 class="catalog__product-description">Показать еще 100500 товаров</h2>
             <p class="catalog__product-text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog__product-button button" href="#">Показать все</a>
@@ -177,15 +177,13 @@
         </ul>
       </div>
     </section>
-
     <section class="catalog catalog--other">
-      <div class="container catalog-other__container">
+      <div class="container container-other">
         <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
-
         <ul class="catalog__list catalog__list--other">
-          <li class="catalog__item catalog__item--other product--other">
-            <h2 class="product__title product__title--other">Сахарозаменитель</h2>
-            <dl class="product__info product__info--other">
+          <li class="catalog__item catalog__item--other">
+            <h2 class="product__title">Сахарозаменитель</h2>
+            <dl class="product__info">
               <dt class="visually-hidden">Колличество</dt>
               <dd>1 упаковка (100&nbsp;г)</dd>
               <dt class="visually-hidden">Цена</dt>
@@ -194,9 +192,9 @@
             <a class="product__button button product__button--other" href="#">Заказать</a>
           </li>
 
-          <li class="catalog__item catalog__item--other product--other">
-            <h2 class="product__title product__title--other">Питьевая вода</h2>
-            <dl class="product__info product__info--other">
+          <li class="catalog__item catalog__item--other">
+            <h2 class="product__title">Питьевая вода</h2>
+            <dl class="product__info">
               <dt class="visually-hidden">Объём</dt>
               <dd>5 литров</dd>
               <dt class="visually-hidden">Цена</dt>
@@ -205,9 +203,9 @@
             <a class="product__button button product__button--other" href="#">Заказать</a>
           </li>
 
-          <li class="catalog__item catalog__item--other product--other">
-            <h2 class="product__title product__title--other">Молоко</h2>
-            <dl class="product__info product__info--other">
+          <li class="catalog__item catalog__item--other">
+            <h2 class="product__title">Молоко</h2>
+            <dl class="product__info">
               <dt class="visually-hidden">Объём</dt>
               <dd>1 литр</dd>
               <dt class="visually-hidden">Цена</dt>
@@ -216,9 +214,9 @@
             <a class="product__button button product__button--other" href="#">Заказать</a>
           </li>
 
-          <li class="catalog__item catalog__item--other product--other">
-            <h2 class="product__title product__title--other">Витамины</h2>
-            <dl class="product__info product__info--other">
+          <li class="catalog__item catalog__item--other">
+            <h2 class="product__title">Витамины</h2>
+            <dl class="product__info">
               <dt class="visually-hidden">Объём</dt>
               <dd>1 упаковка (30&nbsp;г)</dd>
               <dt class="visually-hidden">Цена</dt>
@@ -227,7 +225,6 @@
             <a class="product__button button product__button--other" href="#">Заказать</a>
           </li>
         </ul>
-
         <div class="other-action">
           <p class="other-action__text">Закажите все<br>и получите чехол для<br>кота в подарок!</p>
         </div>
