Устраняет замечания наставника 29.09

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
       </nav>
     </div>
   </header>
-  <main class="main">
+  <main class="main main__container">
     <section class="catalog">
       <div class="container">
         <h1 class="catalog__title">Каталог продукции</h1>
