--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main class="main">
+  <main class="main main__container">
 
     <section class="promo">
       <div class="container promo__container">
