:heavy_check_mark: Сборка #3

--- a/3/form.html
+++ b/3/form.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
   </header>
-  <main class="main">
+  <main class="main main__container">
     <div class="container form__container">
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
         <h1 class="form__title">Подбор программы</h1>
