--- a/3/index.html
+++ b/3/index.html
@@ -33,7 +33,7 @@
     </div>
   </header>
 
-  <main class="main">
+  <main class="main main__container">
 
     <section class="promo">
       <div class="container promo__container">
