--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <header class="page-header page-header--index">
     <div class="container page-header__container">
       <a class="page-header__logo logo" href="index.html" aria-current="page">
-        <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image logo__image--icon" src="ima/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
