Добавляет исправления  lint:bem

--- a/source/form.html
+++ b/source/form.html
@@ -30,8 +30,8 @@
       </nav>
     </div>
   </header>
-  <main class="main main__container">
-    <div class="container form__container">
+  <main class="main">
+    <div class="container main__form-container">
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
         <h1 class="form__title">Подбор программы</h1>
         <p class="form__text">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
@@ -89,7 +89,7 @@
         </fieldset>
         <fieldset class="form__module form__module--extra">
           <legend class="form__module-legend legent-extra">Дополнительно:</legend>
-          <ul class="form__module-list module-list--extra">
+          <ul class="form__module-list form__module-list--extra">
             <li class="form__module-check">
               <input class="form__checkbox-input" type="checkbox" checked id="sweetener" name="sweetener">
               <label class="form__checkbox-label" for="sweetener">сахарозаменитель</label>
