--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,7 +30,7 @@
       </nav>
     </div>
   </header>
-  <main class="main main__container">
+  <main class="main">
     <section class="catalog">
       <div class="container">
         <h1 class="catalog__title">Каталог продукции</h1>
@@ -39,7 +39,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
               </a>
@@ -58,7 +58,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-chicken-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
               </a>
@@ -77,7 +77,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
               </a>
@@ -96,7 +96,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
               </a>
@@ -115,7 +115,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
               </a>
@@ -134,7 +134,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Slim 1000&nbsp;г</h2>
               </a>
@@ -153,7 +153,7 @@
             <a class="product__image-wrapper" href="#">
               <img class="product__image" src="images/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
             </a>
-            <div class="catalog__wrapper">
+            <div class="product__catalog-wrapper">
               <a class="product__link" href="#">
                 <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
               </a>
@@ -181,47 +181,47 @@
         <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
         <ul class="catalog__list catalog__list--other">
           <li class="catalog__item catalog__item--other">
-            <h2 class="product__title">Сахарозаменитель</h2>
-            <dl class="product__info">
+            <h2 class="catalog__product-title">Сахарозаменитель</h2>
+            <dl class="catalog__product-info">
               <dt class="visually-hidden">Колличество</dt>
               <dd>1 упаковка (100&nbsp;г)</dd>
               <dt class="visually-hidden">Цена</dt>
               <dd>200&nbsp;₽</dd>
             </dl>
-            <a class="product__button button product__button--other" href="#">Заказать</a>
+            <a class="button button--other" href="#">Заказать</a>
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <h2 class="product__title">Питьевая вода</h2>
-            <dl class="product__info">
+            <h2 class="catalog__product-title">Питьевая вода</h2>
+            <dl class="catalog__product-info">
               <dt class="visually-hidden">Объём</dt>
               <dd>5 литров</dd>
               <dt class="visually-hidden">Цена</dt>
               <dd>200&nbsp;₽</dd>
             </dl>
-            <a class="product__button button product__button--other" href="#">Заказать</a>
+            <a class="button button--other" href="#">Заказать</a>
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <h2 class="product__title">Молоко</h2>
-            <dl class="product__info">
+            <h2 class="catalog__product-title">Молоко</h2>
+            <dl class="catalog__product-info">
               <dt class="visually-hidden">Объём</dt>
               <dd>1 литр</dd>
               <dt class="visually-hidden">Цена</dt>
               <dd>100&nbsp;₽</dd>
             </dl>
-            <a class="product__button button product__button--other" href="#">Заказать</a>
+            <a class="button button--other" href="#">Заказать</a>
           </li>
 
           <li class="catalog__item catalog__item--other">
-            <h2 class="product__title">Витамины</h2>
-            <dl class="product__info">
+            <h2 class="catalog__product-title">Витамины</h2>
+            <dl class="catalog__product-info">
               <dt class="visually-hidden">Объём</dt>
               <dd>1 упаковка (30&nbsp;г)</dd>
               <dt class="visually-hidden">Цена</dt>
               <dd>300&nbsp;₽</dd>
             </dl>
-            <a class="product__button button product__button--other" href="#">Заказать</a>
+            <a class="button button--other" href="#">Заказать</a>
           </li>
         </ul>
         <div class="other-action">
