--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,10 +13,14 @@
 <body class="page__body">
   <header class="page-header">
     <div class="container page-header__container">
-      <a class="page-header__logo logo" href="index.html" aria-current="page">
+      <a class="page-header__logo logo" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+          <source type="image/svg" width="202" height="59" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+          <source type="image/webp" width="174" height="50" media="(min-width: 1440px)" srcset="images/logo-desktop@1x.webp">
+          <source type="image/webp" width="174" height="50" media="(min-width: 1440px)" srcset="images/logo-desktop@2x.webp">
+          <source type="image/svg" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+          <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@1x.webp">
+          <source type="image/webp" width="174" height="50" media="(min-width: 768px)" srcset="images/logo-tablet@2x.webp">
           <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
         </picture>
         <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
